# otus_cpp_hw1

./: CMakeLists.txt  gtest_version.cpp  test_version.cpp
.github/workflows/: release.yml
